[package]
name = "server"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]

[dependencies]
nickel = "^0.8.0"
rustc-serialize = "^0.3.19"
redis = "^0.5.2"
r2d2 = "^0.7.0"
# r2d2_redis = "^0.2.0"
r2d2_redis = { git="https://github.com/chef/r2d2-redis", branch="update-r2d2"}
plugin = "^0.2.6"
typemap = "^0.3.3"
